# ntpclock

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  platformio.ini  prepare_spiffs_image.sh  sdkconfig
cad/: ntpclock_bottom.3mf  ntpclock_front.3mf  ntpclock_lid.3mf
cad/enclosure/: ntpclock_assembly.step.xz  ntpclock_bottom.3mf  ntpclock_front.3mf  ntpclock_lid.3mf
cad/i2c_header_x5/: i2c_header_x5.kicad_pcb  i2c_header_x5.net  i2c_header_x5.pro  i2c_header_x5.sch  i2c_header_x5.step
cad/i2c_header_x5/gerber/: i2c_header_x5-B_Cu.gbr  i2c_header_x5-B_Mask.gbr  i2c_header_x5-B_Paste.gbr  i2c_header_x5-B_SilkS.gbr  i2c_header_x5-Edge_Cuts.gbr  i2c_header_x5-F_Cu.gbr  i2c_header_x5-F_Mask.gbr  i2c_header_x5-F_Paste.gbr  i2c_header_x5-F_SilkS.gbr  i2c_header_x5-NPTH-drl_map.ps  i2c_header_x5-NPTH.drl  i2c_header_x5-PTH-drl_map.ps  i2c_header_x5-PTH.drl  i2c_header_x5-job.gbrjob
include/: als.h  display.h  display_task.h  main.h  ntp.h  rtc.h  secrets.h.example  wifi.h  wifi_local.h
main/: CMakeLists.txt  abort.cpp  abort.h  als.cpp  als.h  arduino_main.cpp  arduino_main.h  arduino_task.cpp  arduino_task.h  display.cpp  display.h  display_task.cpp  display_task.h  download.cpp  download.h  filesystem.cpp  filesystem.h  main.cpp  main.h  ntp.cpp  ntp.h  nvs_local.cpp  nvs_local.h  rtc.cpp  rtc.h  secrets.h.example  start_wifi.cpp  start_wifi.h  tz_info_local.cpp  tz_info_local.h  unique_id.cpp  unique_id.h  webserver_control.cpp  webserver_control.h  wifi_control.cpp  wifi_control.h  wpa_key_gen.cpp  wpa_key_gen.h
main/http/: api_handlers.cpp  api_handlers.h  file_server.cpp  file_server.h  server_control.cpp  server_control.h
spiffs/: index.html
spiffs/w/: index.html  timezones.json
spiffs/www-data/: index.html
src/: als.cpp  display.cpp  display.h  display_task.cpp  main.cpp  ntp.cpp  ntp.h  rtc.cpp  rtc.h  timezone.h  wifi.cpp  wifi.h  wifi_local.cpp
(+2 files in other folders)
